Changes to fig2dev
===============================================================================
Version 3.2
===============================================================================
Patchlevel 7b (Xxx 201x)

BUGS FIXED:
	o Correct typos in man-pages, debian 30_man_typo.patch.

-------------------------------------
Patchlevel 7a (May 2018)

NEW FEATURES:
	o Add option -w, wrap (create stand-alone perl file) for Perl/Tk output.
	o Distribute the X bitmaps files within fig2dev, no need to install
	  these files. The files were needed for Tk and Perl/Tk output.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Fix regression whereupon flipped ellipses were not read. Ticket #23.
	o Distribute i18n files ru_RU.CP1251.ps and uk_UA.KOI8-U.ps.
	o Make test "survive debian bug #890016" succeed on 32 bit systems.

-------------------------------------
Patchlevel 7 (April 2018)

OPTION LETTER CHANGES:
	o  Language         previous option         current option
	  ------------------------------------------------------------
	   cgm              -b dummy                -a
	   epic             -A scale                -d scale
	   eepic            -A scale                -d scale
	   eepicemu         -A scale                -d scale
	   gbx              -i on|off               -v
	   ibmgl            -m mag,xoff,yoff        -m mag -x xoff -y yoff
	   mp               -I file                 -d file
	   ps               -S dummy                -o

NEW FEATURES:
	o Print language-specific help text by using fig2dev -L lang -h.
	o Add option -M, multipage, for MetaPost output language.
	o Add option -P, pagemode, and -z to choose a pagesize for pdf output.
	o Add option -W (scaling of figures not possible) for tikz.
	o Add option -b, border width, for LaTeX output language.
	o Add option -f for pstex_t and pdftex_t output language.
	o Add uk_UA and ru_RU encodings for PostScript output. Ticket #12.

BUGS FIXED: