@@ -5,6 +5,7 @@ Version 3.2
 Patchlevel 7b (Xxx 201x)
 
 BUGS FIXED:
+	o Accept blanks in color names (e.g., fig2dev -L eps -g"Misty Rose"..).
 	o Correct typos in man-pages, debian 30_man_typo.patch.
 
 -------------------------------------
